Fixed homepage jumbotron cta button on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -7,9 +7,13 @@ body {
 ul, ol {
   margin-left: 30px;
 }
-.slider-caption-center {
-	top: 178px !important;
-}
+
+// @media (min-width: 768px) {
+//   .slider-caption-center {
+//     top: 178px;
+//   }
+// }
+
 
 .crossfit-logo svg {
 	width: 130px;
